--- a/src/components/GemCard/_gemCard.scss
+++ b/src/components/GemCard/_gemCard.scss
@@ -52,7 +52,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    z-index: 100;
+    z-index: 50;
 
     #{$el}-sub {
       @include clamp(2);
@@ -72,7 +72,6 @@
     width: 100%;
 
     span {
-
       font-family: var(--font-family-heading);
       font-weight: 600;
       font-size: 2em;
@@ -90,7 +89,7 @@
       width: 28px;
 
       path {
-        fill: #FD872A
+        fill: #fd872a;
       }
     }
   }
